--- a/projectcss1.css
+++ b/projectcss1.css
@@ -1,11 +1,11 @@
 @keyframes fadein{
-0% {opacity : 0;}
-100%{opacity : 1;}
+from {opacity : 0;}
+to {opacity : 1;}
 }
 body {
 	animation-name: fadeIn;
 	animation-duration: 3s;
 	animation-timing-function: ease-in-out;
-	animation-delay: 1s;
+	animation-delay: 2s;
 	animation-iteration-count: 1;
 }
