--- a/projectcss1.css
+++ b/projectcss1.css
@@ -4,7 +4,7 @@ to {opacity : 1;}
 }
 
 body.main {
-	animation-name: fadeIn;
+	animation-name: fadein;
 	animation-duration: 3s;
 	animation-timing-function: ease-in-out;
 	animation-delay: 2s;
