--- a/projectcss1.css
+++ b/projectcss1.css
@@ -3,7 +3,7 @@ from {opacity : 0;}
 to {opacity : 1;}
 }
 
-body.main {
+body {
 	animation-name: fadein;
 	animation-duration: 3s;
 	animation-timing-function: ease-in-out;
